# topic_modeling

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  bert_topic.md  tips and tricks.md  traditional_tm.md
notebooks/: topic_modelling.ipynb
src/: config.py
src/data/: etl.py
src/helper/: utlis.py
src/model/: bert.py  eval.py  label.py  llm.py  model_run.py  visualize.py
src/ui/: pages.py
