[project]
name = "topic-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "transformers>=4.57.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
